<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <EditTextPreference
        android:defaultValue="@string/settings_min_magnitude_default"
        android:inputType="numberDecimal"
        android:key="@string/settings_min_magnitude_key"
        android:selectAllOnFocus="true"
        android:summary="@string/settings_min_magnitude_default"
        android:title="@string/settings_min_magnitude_label" />

    <ListPreference
        android:defaultValue="@string/settings_order_by_default"
        android:entries="@array/settings_order_by_labels"
        android:entryValues="@array/settings_order_by_values"
        android:key="@string/settings_order_by_key"
        android:summary="@string/settings_order_by_default"
        android:title="@string/settings_order_by_label" />

    <EditTextPreference
        android:defaultValue="@string/settings_limit_default"
        android:inputType="number"
        android:key="@string/settings_limit_key"
        android:selectAllOnFocus="true"
        android:summary="@string/settings_limit_default"
        app:title="@string/settings_limit_label" />


</PreferenceScreen>