<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    app:cardCornerRadius="16dp"
    app:cardElevation="8dp"
    app:cardPreventCornerOverlap="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/earthquake_item_magnitude_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="@drawable/circle"
            android:gravity="center"
            android:padding="16dp"
            android:text="@string/magnitude_placeholder"
            android:textColor="@color/white"
            android:textSize="28sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/earthquake_item_distance_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/quake_item_distance_placeholder"
            android:textAllCaps="true"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="@id/earthquake_item_location_text"
            app:layout_constraintTop_toTopOf="@id/earthquake_item_magnitude_text" />

        <TextView
            android:id="@+id/earthquake_item_location_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:ellipsize="marquee"
            android:gravity="start"
            android:scrollHorizontally="true"
            android:singleLine="true"
            android:text="@string/quake_item_location_long_placeholder"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="@+id/earthquake_item_magnitude_text"
            app:layout_constraintEnd_toStartOf="@id/earthquake_item_time_text"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/earthquake_item_magnitude_text"
            app:layout_constraintTop_toBottomOf="@id/earthquake_item_distance_text" />

        <TextView
            android:id="@+id/earthquake_item_date_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:text="@string/quake_item_date_placeholder"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/earthquake_item_distance_text" />

        <TextView
            android:id="@+id/earthquake_item_time_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/quake_item_time_placeholder"
            app:layout_constraintEnd_toEndOf="@+id/earthquake_item_date_text"
            app:layout_constraintTop_toBottomOf="@+id/earthquake_item_date_text" />
    </androidx.constraintlayout.widget.ConstraintLayout>


</com.google.android.material.card.MaterialCardView>